feat: Add AI career and future vibecoding documentation and remove the `.rules` file.

--- a/docs/ai-bigdata/AI/career.mdx
+++ b/docs/ai-bigdata/AI/career.mdx
@@ -1,8 +1,15 @@
 ---
-title: "AI Career Paths: Platform vs Solution"
-sidebar_label: "🧭 Career Direction"
-sidebar_position: 1
-description: "Deep dive comparison between AI Infrastructure and AI Business Solution paths for Java developers"
+id: career
+title: Career Paths
+sidebar_label: Career Paths
+sidebar_position: 10
+description: A forward-looking career paths emphasizing Java/React full-stack background and AI core technology
+tags:
+  - career
+  - ai
+last_update:
+  date: 2026-01-25
+  author: halcyon666
 ---
 
 # Java Developer's AI Crossroads
