docs: Add Star top those docs

--- a/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-1-ai-native.mdx
+++ b/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-1-ai-native.mdx
@@ -27,9 +27,9 @@ last_update:
 
 AI 工具不是简单的"代码补全",而是要**重构整个开发生命周期**。必须先建立 AI-Native 的工作习惯,才能在后续阶段高效学习复杂的 AI 技术。
 
-## 核心能力 1: IDE 掌控力与 Prompt 工程基础
+## ⭐ 核心能力 1: IDE 掌控力与 Prompt 工程基础
 
-### 目标
+### ⭐ 目标
 
 强迫自己**不写** Boilerplate Code,通过 Prompt 驱动代码生成
 
@@ -38,14 +38,14 @@ AI 工具不是简单的"代码补全",而是要**重构整个开发生命周期
 **量化目标** (可验证的成功标准):
 - **项目级**: 在一个包含 10 个文件的项目中,至少 8 个文件 (80%) 的初始版本由 AI 生成
 - **文件级**: 每个文件中样板代码 (imports、类定义、基础 CRUD 方法) 100% 由 AI 生成
-- **迭代效率**: 平均每个文件通过 ≤ 3 次 Prompt 迭代达到可用状态
+- ⭐ **迭代效率**: 平均每个文件通过 ≤ 3 次 Prompt 迭代达到可用状态
 
 **工作流** (强制执行的三步法):
 1. **生成**: 使用 Cursor/Windsurf 的 `Cmd+K` 或 `Composer`,通过自然语言描述生成代码
-2. **验证**: 如果生成的代码不符合要求,**禁止手动修改**,而是分析问题并修改 Prompt
-3. **沉淀**: 将有效的 Prompt 模板保存到个人 `.cursorrules` 文件,包含项目代码规范和最佳实践
+2. ⭐ **验证**: 如果生成的代码不符合要求,**禁止手动修改**,而是分析问题并修改 Prompt
+3. ⭐ **沉淀**: 将有效的 Prompt 模板保存到个人 `.cursorrules` 文件,包含项目代码规范和最佳实践
 
-### Prompt 模板示例
+### ⭐ Prompt 模板示例
 
 **模板 1: DDD 架构代码生成**
 
@@ -75,7 +75,7 @@ AI 工具不是简单的"代码补全",而是要**重构整个开发生命周期
    → 太模糊,没有说明架构风格、技术栈、业务规则
 ```
 
-**模板 2: 错误调试**
+**⭐ 模板 2: 错误调试**
 
 ```
 你是一位经验丰富的 Python 调试专家。
@@ -112,15 +112,15 @@ AI 工具不是简单的"代码补全",而是要**重构整个开发生命周期
 
 **能力验证清单** (必须全部达成):
 - [ ] **代码生成能力**: 能够通过自然语言描述生成 80% 以上的样板代码,无需手动补充
-- [ ] **Prompt 库建设**: 建立个人 Prompt Library,包含至少 5 个模板 (代码生成、调试、重构、测试、文档各 1 个)
-- [ ] **迭代优化能力**: 能够通过迭代 Prompt (而非手动修改代码) 来纠正 AI 生成的代码,平均迭代次数 ≤ 3 次
+- [ ] ⭐ **Prompt 库建设**: 建立个人 Prompt Library,包含至少 5 个模板 (代码生成、调试、重构、测试、文档各 1 个)
+- [ ] ⭐ **迭代优化能力**: 能够通过迭代 Prompt (而非手动修改代码) 来纠正 AI 生成的代码,平均迭代次数 ≤ 3 次
 - [ ] **调试准确率**: 在 10 次错误调试中,AI 能够在前 3 个建议中给出正确 Root Cause 的次数 ≥ 7 次 (70% 准确率)
 
 **验证方法**: 选择一个小型项目 (如 Todo List API),从零开始使用 AI 生成所有代码,记录生成比例和迭代次数
 
-## 核心能力 2: 基础设施搭建
+## ⭐ 核心能力 2: 基础设施搭建
 
-### 本地模型部署
+### ⭐ 本地模型部署
 
 **Ollama 部署 Llama 3.1 / Qwen 2.5 (8B)**
 
@@ -151,10 +151,10 @@ response = client.query("What is 123 + 456?")
 print(response)  # 应该调用 add_numbers 工具
 ```
 
-### 容器化环境
+### ⭐ 容器化环境
 
 使用 Docker Compose 部署本地服务:
-- Milvus (向量数据库)
+- ⭐ Milvus (向量数据库)
 - Dify (低代码 AI 平台)
 - Neo4j (知识图谱,可选)
 
@@ -180,17 +180,17 @@ print(response)  # 应该调用 add_numbers 工具
 **必须完成的交付物** (作为进入 Level 2 的前置条件):
 
 **基础设施层**:
-- [ ] 成功部署本地 Ollama 并运行 8B 模型,能够通过 API 调用获得响应
+- [ ] ⭐ 成功部署本地 Ollama 并运行 8B 模型,能够通过 API 调用获得响应
 - [ ] 完成至少 1 个 MCP Client 示例,实现 Ollama 调用本地工具函数
-- [ ] 使用 Docker Compose 成功部署至少 2 个 AI 相关服务 (Milvus + Dify 或 Neo4j)
+- [ ] ⭐ 使用 Docker Compose 成功部署至少 2 个 AI 相关服务 (Milvus + Dify 或 Neo4j)
 
 **Prompt 工程层**:
-- [ ] 建立个人 Prompt Library,包含至少 5 个模板,覆盖: 代码生成、调试、重构、测试、文档
-- [ ] 配置完成 Cursor/Windsurf (包含 `.cursorrules` 文件),并在一个小项目中实践 AI 生成 80% 代码
+- [ ] ⭐ 建立个人 Prompt Library,包含至少 5 个模板,覆盖: 代码生成、调试、重构、测试、文档
+- [ ] ⭐ 配置完成 Cursor/Windsurf (包含 `.cursorrules` 文件),并在一个小项目中实践 AI 生成 80% 代码
 
 **能力验证**:
 - [ ] 能够独立完成一个小型项目 (如 RESTful API) 的搭建,80% 代码由 AI 生成
-- [ ] 能够通过 Prompt 迭代解决至少 3 个实际编码问题,无需手动修改代码
+- [ ] ⭐ 能够通过 Prompt 迭代解决至少 3 个实际编码问题,无需手动修改代码
 
 **时间检查点**: 如果超过 2 周仍未完成,需要重新评估学习方法或降低项目复杂度
 
