--- a/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-1-ai-native.mdx
+++ b/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-1-ai-native.mdx
@@ -47,27 +47,73 @@ AI 工具不是简单的"代码补全",而是要**重构整个开发生命周期
 
 ### ⭐ Prompt 模板示例
 
-**模板 1: DDD 架构代码生成**
+<details>
+<summary>模板 1: DDD 架构代码生成</summary>
+```markdown
+# Role: DDD Java 聚合根代码生成专家
 
+## Profile
+- author: LangGPT
+- version: 1.0
+- language: 中文
+- description: 
+你是一名精通领域驱动设计（DDD）的高级 Java 架构师，擅长将业务规则建模为高内聚、强约束的聚合根实体，并输出可直接用于生产环境的代码。
+
+## Skills
+- 深入理解 DDD 中的聚合根、实体、值对象、领域事件
+- 熟练使用 Java 17 进行领域建模
+- 能将业务规则转化为实体内部的不变性约束
+- 使用 Lombok 与现代 Java 语法编写简洁、可维护代码
+
+## Background
+当前需要基于领域驱动设计，为指定领域上下文建模一个聚合根实体。  
+该实体必须体现业务规则与行为，而非简单的数据载体（避免贫血模型）。
+
+## Goals
+- 生成一个符合 DDD 原则的聚合根实体类
+- 实体需内聚业务逻辑，并通过方法维护自身不变性
+- 代码结构清晰，可作为领域层核心模型使用
+
+## Rules
+1. 使用 **Java 17** 语法
+2. 聚合根必须是一个 **富领域模型**，包含必要的业务方法
+3. 必须显式建模：
+   - 实体 ID（作为值对象或强类型）
+   - 至少一个值对象
+   - 至少一个领域事件（仅定义，不涉及基础设施）
+4. 使用 **Lombok**（如 `@Getter`, `@EqualsAndHashCode` 等）减少样板代码
+5. 为类、核心属性、关键方法编写 **详细 Javadoc**
+6. 不引入持久化框架注解（如 JPA）
+7. 输出内容 **仅包含完整的 Java 代码**
+
+## Workflows
+1. 分析领域上下文与业务规则
+2. 识别聚合根边界与核心不变性
+3. 设计实体、值对象与领域事件
+4. 输出完整、可读、符合 DDD 的实体类代码
+
+## Input
+- 领域上下文:
+  - 实体名称: User
+  - 核心属性:
+    - userId（唯一标识）
+    - email（必须唯一）
+    - profile（可选值对象）
+  - 业务规则:
+    - email 在系统中必须唯一（由领域层语义保证）
+    - profile 可为空，但一旦存在必须完整有效
+
+## OutputFormat
+- 单个 Java 文件
+- 包含：
+  - 聚合根实体 `User`
+  - 必要的值对象
+  - 至少一个领域事件类
+
+## Init
+请基于以上约束，生成 **完整的 User 聚合根实体类代码**。
 ```
-你是一位精通领域驱动设计 (DDD) 的 Java 架构师。
-
-需求: 为 [领域名称] 创建聚合根实体类。
-
-要求:
-1. 使用 Java 17 语法
-2. 遵循 DDD 原则: 实体包含业务逻辑,不是贫血模型
-3. 包含: 实体 ID、值对象、领域事件
-4. 使用 Lombok 注解减少样板代码
-5. 添加详细的 Javadoc 注释
-
-领域上下文:
-- 实体名称: [User]
-- 核心属性: [userId, email, profile]
-- 业务规则: [email 必须唯一,profile 可选]
-
-请生成完整的实体类代码。
-```
+</details>
 
 **反面案例**:
 ```
@@ -75,32 +121,40 @@ AI 工具不是简单的"代码补全",而是要**重构整个开发生命周期
    → 太模糊,没有说明架构风格、技术栈、业务规则
 ```
 
-**⭐ 模板 2: 错误调试**
+
+<details>
+<summary>⭐ 模板 2: 错误调试</summary>
+```markdown
+你是一位经验丰富的 Python 调试专家，精通 FastAPI 与 Milvus 相关开发。
+
+## 项目和环境信息
+- 项目类型: FastAPI + Milvus RAG 系统
+- Python 版本: 3.11
+- 运行环境: Docker
+- 错误触发时机: 向 Milvus 插入向量时
+
+## 错误日志
+请在下面完整粘贴 Stack Trace:
+---
+[粘贴完整 Stack Trace]
+---
+
+## 相关代码
+请提供出错代码片段（建议前后各 10 行）：
+---
+[粘贴代码片段]
+---
+
+## 分析需求
+请针对以上信息进行详细分析，包括：
+
+1. **根本原因 (Root Cause)**：请明确指出导致错误的核心原因。
+2. **错误发生原因**：解释为什么会出现此错误，包括可能的环境、依赖或逻辑问题。
+3. **解决方案**：提供 3 个可行方案，并按推荐优先级排序，说明每个方案的优缺点。
+4. **预防建议**：针对类似问题给出最佳实践或防护措施。
 
 ```
-你是一位经验丰富的 Python 调试专家。
-
-错误上下文:
-- 项目: [FastAPI + Milvus RAG 系统]
-- 运行环境: [Python 3.11, Docker]
-- 错误发生时机: [向 Milvus 插入向量时]
-
-错误日志:
-```
-[粘贴完整的 Stack Trace]
-```
-
-相关代码:
-```python
-[粘贴出错的代码片段,前后各 10 行]
-```
-
-请分析:
-1. Root Cause (根本原因)
-2. 为什么会发生这个错误
-3. 提供 3 个可能的解决方案,按推荐优先级排序
-4. 如何预防类似错误
-```
+</details>
 
 **反面案例**:
 ```
@@ -180,8 +234,8 @@ print(response)  # 应该调用 add_numbers 工具
 **必须完成的交付物** (作为进入 Level 2 的前置条件):
 
 **基础设施层**:
-- [ ] ⭐ 成功部署本地 Ollama 并运行 8B 模型,能够通过 API 调用获得响应
-- [ ] 完成至少 1 个 MCP Client 示例,实现 Ollama 调用本地工具函数
+- [X] ⭐ 成功部署本地 Ollama 并运行 8B 模型,能够通过 API 调用获得响应
+- [X] 完成至少 1 个 MCP Client 示例,实现 Ollama 调用本地工具函数
 - [ ] ⭐ 使用 Docker Compose 成功部署至少 2 个 AI 相关服务 (Milvus + Dify 或 Neo4j)
 
 **Prompt 工程层**:
