--- a/docs/misc/Others/command-usage.mdx
+++ b/docs/misc/Others/command-usage.mdx
@@ -40,6 +40,11 @@ $env:PATH="$env:JAVA_HOME\bin;$env:PATH"
 ./gradlew test --daemon
 ```
 
+```bash
+export JAVA_HOME="/d/software/Java/jdk-17.0.7"
+export PATH="$JAVA_HOME/bin:$PATH"
+```
+
 
 import TailProtocal from "@site/src/components/TailProtocal";
 
