--- a/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-2-rag.mdx
+++ b/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-2-rag.mdx
@@ -9,7 +9,7 @@ tags:
 - rag
 - level-2
 last_update:
-  date: '2026-01-25'
+  date: '2026-01-27'
   author: halcyon666
 ---
 
@@ -45,6 +45,23 @@ RAG 是 AI 应用的核心能力,Agent 的智能决策依赖于 RAG 提供的知
 2. 接入本地 Ollama
 3. ⭐ 搭建企业知识库: 上传 PDF,配置 Embedding 模型,测试混合检索
 4. 发布 Web 端对话机器人
+### 核心实战：Dify 自定义工具 (Custom Tool)
+利用你的 **Spring Boot** 优势，增强 Agent 的手脚。
+
+#### 任务描述
+Dify 无法直接获取你公司的实时数据（如服务器状态、数据库库存），你需要写一个 API 给它调用。
+
+#### 实施步骤
+1.  **后端开发 (Spring Boot)**：
+    * 编写一个接口 `GET /api/v1/system/status`，返回 JSON 格式的 CPU/内存/业务数据。
+    * 生成 **OpenAPI (Swagger)** 描述文档。
+2.  **Dify 集成**：
+    * 在 Dify "工具" 页签 -> "创建自定义工具"。
+    * 导入你的 OpenAPI Schema。
+3.  **Agent 编排**：
+    * 在 Prompt 中开启该工具。
+    * 测试提问：“现在的系统负载怎么样？” -> Agent 自动调用 Java 接口 -> 回答。
+
 
 ### 代码流: 手写 RAG 链路 (20% 深度定制)
 
@@ -288,6 +305,7 @@ def sync_user_to_vector_db(event: UserCreatedEvent):
 
 **RAG 应用层**:
 - [X] 完成 Dify 部署并发布至少 1 个知识库应用,能够回答领域问题
+- [ ] Dify 自定义工具
 - [ ] ⭐ 手写完整 RAG 链路代码,包含: PDF 解析 → 切片 → 向量化 → Milvus 存储 → 检索 → LLM 生成
 - [ ] ⭐ 实现至少 1 种高级切片策略 (Parent-Child 或 HyDE),并通过对比实验验证效果
 
