--- a/docs/tools/NonDevelopment/not-develop-software-tips.mdx
+++ b/docs/tools/NonDevelopment/not-develop-software-tips.mdx
@@ -48,14 +48,20 @@ last_update:
 }
 ```
 
-## 在vscode中
+## PicGo插件使用
 
 ### 使用typora中安装的`PicGo-Core`
 
 1. 在vscode中安装PicGo插件
-2. 在vscode中设置PicGo的Picgo: Config Path为 `C:\Users\xxx\.picgo\config.json`
+2. 在vscode中设置PicGo的Picgo: Config Path `%USERPROFILE%\.picgo\config.json`
 
 ![](https://s2.loli.net/2025/09/20/s8rYEGoZlyJe3US.png)
+
+:::tip
+如果找不到可以去picgo里面找
+![20260201182045](https://s2.loli.net/2026/02/01/RxIjLb5h6muAPNe.png)
+:::
+
 
 ### 使用npm安装的`picgo`
 
