--- a/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-2-rag.mdx
+++ b/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-2-rag.mdx
@@ -307,7 +307,7 @@ def sync_user_to_vector_db(event: UserCreatedEvent):
 
 **RAG 应用层**:
 - [X] 完成 Dify 部署并发布至少 1 个知识库应用,能够回答领域问题
-- [ ] Dify 自定义工具
+- [X] Dify 自定义工具
 - [ ] ⭐ 手写完整 RAG 链路代码,包含: PDF 解析 → 切片 → 向量化 → Milvus 存储 → 检索 → LLM 生成
 - [ ] ⭐ 实现至少 1 种高级切片策略 (Parent-Child 或 HyDE),并通过对比实验验证效果
 
