--- a/docs/misc/Others/command-usage.mdx
+++ b/docs/misc/Others/command-usage.mdx
@@ -45,6 +45,14 @@ export JAVA_HOME="/d/software/Java/jdk-17.0.7"
 export PATH="$JAVA_HOME/bin:$PATH"
 ```
 
+## 启动 docusaurus `bat`脚本 
+
+`start-docusaurus.ps1`在项目中
+
+```shell
+@echo off
+powershell.exe -NoProfile -ExecutionPolicy Bypass -File "D:\summary\start-docusaurus.ps1"
+```
 
 import TailProtocal from "@site/src/components/TailProtocal";
 
