--- a/docs/misc/Others/win11-release-update.mdx
+++ b/docs/misc/Others/win11-release-update.mdx
@@ -13,7 +13,7 @@ last_update:
   author: halcyon666
 ---
 ### 1. 下载家庭版 或者 专业版 系统文件
-[](https://www.microsoft.com/zh-cn/software-download/windows11)
+[Windows 11 下载页面](https://www.microsoft.com/zh-cn/software-download/windows11)
 
 ### 2. 删除`appraiserres.dll`文件
 
