docs: add source/reference metadata to AI roadmap documents for graph linking

--- a/docs/ai-bigdata/AI/oh-my-opencode-installation-guide.mdx
+++ b/docs/ai-bigdata/AI/oh-my-opencode-installation-guide.mdx
@@ -9,6 +9,12 @@ tags:
 - open-code
 - development-tool
 - tutorial
+sources:
+- level-1-ai-native
+- wsl-opencode
+references:
+- vibe-coding
+- mcp
 last_update:
   date: '2026-01-26'
   author: halcyon666
