--- a/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-1-ai-native.mdx
+++ b/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-1-ai-native.mdx
@@ -8,6 +8,15 @@ tags:
 - ai
 - prompt-engineering
 - level-1
+sources:
+- overview
+references:
+- level-2-rag
+- mcp
+- prompt
+- wsl-opencode
+- oh-my-opencode
+- vibe-coding
 last_update:
   date: '2026-01-25'
   author: halcyon666
