--- a/docs/ai-bigdata/AI/prompt-engineering-roadmap/overview.mdx
+++ b/docs/ai-bigdata/AI/prompt-engineering-roadmap/overview.mdx
@@ -9,6 +9,13 @@ tags:
 - prompt-engineering
 - full-stack
 - architecture
+references:
+- level-1-ai-native
+- level-2-rag
+- level-3-agent
+- level-4-production
+- summary
+- lays-in-ai
 last_update:
   date: '2026-01-25'
   author: halcyon666
