--- a/docs/ai-bigdata/AI/prompt-engineering-roadmap/summary.mdx
+++ b/docs/ai-bigdata/AI/prompt-engineering-roadmap/summary.mdx
@@ -8,6 +8,15 @@ tags:
 - ai
 - prompt-engineering
 - interview
+sources:
+- overview
+- level-1-ai-native
+- level-2-rag
+- level-3-agent
+- level-4-production
+references:
+- prompt
+- career
 last_update:
   date: '2026-01-25'
   author: halcyon666
