--- a/docs/ai-bigdata/AI/prompt.mdx
+++ b/docs/ai-bigdata/AI/prompt.mdx
@@ -7,6 +7,11 @@ description: Prompt
 tags:
 - ai
 - machine-learning
+sources:
+- level-1-ai-native
+- summary
+references:
+- maxi-model-capacity
 last_update:
   date: '2026-01-27'
   author: halcyon666
