--- a/docs/ai-bigdata/AI/wsl-opencode.mdx
+++ b/docs/ai-bigdata/AI/wsl-opencode.mdx
@@ -9,6 +9,11 @@ tags:
 - open-code
 - development-tool
 - tutorial
+sources:
+- level-1-ai-native
+references:
+- oh-my-opencode
+- vibe-coding
 last_update:
   date: '2026-02-05'
   author: halcyon666
