--- a/docs/ai-bigdata/AI/AI-formula.mdx
+++ b/docs/ai-bigdata/AI/AI-formula.mdx
@@ -7,6 +7,8 @@ description: AI Formula
 tags:
 - ai
 - machine-learning
+sources:
+- lays-in-ai
 last_update:
   date: '2026-01-25'
   author: halcyon666
