--- a/docs/ai-bigdata/AI/ai-problems.mdx
+++ b/docs/ai-bigdata/AI/ai-problems.mdx
@@ -7,6 +7,8 @@ description: AI Problems
 tags:
 - ai
 - machine-learning
+sources:
+- level-1-ai-native
 last_update:
   date: '2026-01-25'
   author: halcyon666
