--- a/docs/ai-bigdata/AI/career.mdx
+++ b/docs/ai-bigdata/AI/career.mdx
@@ -8,6 +8,12 @@ description: A forward-looking career paths emphasizing Java/React full-stack ba
 tags:
 - career
 - ai
+sources:
+- level-4-production
+- summary
+references:
+- future-vibecoding
+- lays-in-ai
 last_update:
   date: '2026-01-25'
   author: halcyon666
