--- a/docs/ai-bigdata/AI/future-vibecoding.mdx
+++ b/docs/ai-bigdata/AI/future-vibecoding.mdx
@@ -9,6 +9,11 @@ tags:
 - vibecoding
 - ai-assisted-development
 - programming-mindset
+sources:
+- vibe-coding
+- career
+references:
+- oh-my-opencode
 last_update:
   date: '2026-01-25'
   author: halcyon666
