--- a/docs/ai-bigdata/AI/lays-in-ai.mdx
+++ b/docs/ai-bigdata/AI/lays-in-ai.mdx
@@ -7,6 +7,13 @@ description: AI开发核心技术栈
 tags:
 - ai
 - machine-learning
+sources:
+- overview
+references:
+- level-2-rag
+- level-3-agent
+- level-4-production
+- maxi-model-capacity
 last_update:
   date: '2026-01-25'
   author: halcyon666
