--- a/docs/ai-bigdata/AI/maxi-model-capacity.mdx
+++ b/docs/ai-bigdata/AI/maxi-model-capacity.mdx
@@ -7,6 +7,12 @@ description: 基于 ReAct 的 Agent 智能体设计完整指南
 tags:
 - ai
 - machine-learning
+sources:
+- lays-in-ai
+- level-3-agent
+references:
+- prompt
+- mcp
 last_update:
   date: '2026-01-25'
   author: halcyon666
