--- a/docs/ai-bigdata/AI/mcp.mdx
+++ b/docs/ai-bigdata/AI/mcp.mdx
@@ -7,6 +7,12 @@ description: MCP 协议详解
 tags:
 - ai
 - machine-learning
+sources:
+- level-1-ai-native
+references:
+- maxi-model-capacity
+- wsl-opencode
+- oh-my-opencode
 last_update:
   date: '2026-01-25'
   author: halcyon666
