--- a/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-2-rag.mdx
+++ b/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-2-rag.mdx
@@ -8,6 +8,12 @@ tags:
 - ai
 - rag
 - level-2
+sources:
+- overview
+- level-1-ai-native
+references:
+- level-3-agent
+- lays-in-ai
 last_update:
   date: '2026-01-27'
   author: halcyon666
