--- a/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-3-agent.mdx
+++ b/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-3-agent.mdx
@@ -9,6 +9,13 @@ tags:
 - agent
 - langgraph
 - level-3
+sources:
+- overview
+- level-2-rag
+references:
+- level-4-production
+- maxi-model-capacity
+- lays-in-ai
 last_update:
   date: '2026-01-25'
   author: halcyon666
