--- a/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-4-production.mdx
+++ b/docs/ai-bigdata/AI/prompt-engineering-roadmap/level-4-production.mdx
@@ -9,6 +9,13 @@ tags:
 - production
 - fine-tuning
 - level-4
+sources:
+- overview
+- level-3-agent
+references:
+- summary
+- lays-in-ai
+- career
 last_update:
   date: '2026-01-25'
   author: halcyon666
