--- a/docs/ai-bigdata/AI/vibe-coding.mdx
+++ b/docs/ai-bigdata/AI/vibe-coding.mdx
@@ -7,6 +7,12 @@ description: Vibe Coding Tools
 tags:
 - ai
 - machine-learning
+sources:
+- level-1-ai-native
+references:
+- future-vibecoding
+- oh-my-opencode
+- wsl-opencode
 last_update:
   date: '2026-01-25'
   author: halcyon666
