--- a/docs/ai-bigdata/AI/future-vibecoding.mdx
+++ b/docs/ai-bigdata/AI/future-vibecoding.mdx
@@ -12,8 +12,7 @@ tags:
 sources:
 - vibe-coding
 - career
-references:
-- oh-my-opencode
+references: [] # Removed oh-my-opencode to break DAG cycle
 last_update:
   date: '2026-01-25'
   author: halcyon666
