feat: enhance graph relationships and optimize graph view UI

--- a/docs/ai-bigdata/AI/lays-in-ai.mdx
+++ b/docs/ai-bigdata/AI/lays-in-ai.mdx
@@ -14,6 +14,7 @@ references:
 - level-3-agent
 - level-4-production
 - maxi-model-capacity
+- hadoop
 last_update:
   date: '2026-01-25'
   author: halcyon666
