--- a/docs/ai-bigdata/BigData/hadoop.mdx
+++ b/docs/ai-bigdata/BigData/hadoop.mdx
@@ -7,6 +7,13 @@ description: Complete Hadoop guide covering HDFS, MapReduce, YARN, and cluster s
 tags:
 - ai
 - machine-learning
+sources:
+- lays-in-ai
+references:
+- hbase
+- flink-docker-compose
+- full-hadoop-reference
+- hadoop-overview
 last_update:
   date: '2026-01-25'
   author: halcyon666
