--- a/docs/ai-bigdata/BigData/flink docker-compose.mdx
+++ b/docs/ai-bigdata/BigData/flink docker-compose.mdx
@@ -8,6 +8,8 @@ description: 'shell tee flink.yml <<- ''EOF'' version: "2.2" services: jobmanage
 tags:
 - ai
 - machine-learning
+sources:
+- hadoop
 last_update:
   date: '2026-01-25'
   author: halcyon666
