docs: remove invalid graph source and reference links
Remove 'intro' from sources and invalid refs like 'lays-in-ai' across docs to fix broken graph node relationships.

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/docs/ai-bigdata/AI/mcp.mdx
+++ b/docs/ai-bigdata/AI/mcp.mdx
@@ -9,10 +9,7 @@ tags:
 - machine-learning
 sources:
 - level-1-ai-native
-references:
-- maxi-model-capacity
-- wsl-opencode
-- oh-my-opencode
+references: []
 last_update:
   date: '2026-01-25'
   author: halcyon666
