--- a/docs/ai-bigdata/AI/prompt.mdx
+++ b/docs/ai-bigdata/AI/prompt.mdx
@@ -10,8 +10,7 @@ tags:
 sources:
 - level-1-ai-native
 - summary
-references:
-- maxi-model-capacity
+references: []
 last_update:
   date: '2026-01-27'
   author: halcyon666
