fix(mdx): replace invalid HTML comments with MDX comments to fix syntax errors

--- a/docs/Frontend/Vue/vue-route.mdx
+++ b/docs/Frontend/Vue/vue-route.mdx
@@ -114,7 +114,7 @@ createApp(App).use(router).mount('#app')
 ## `App.vue`
 
 ```vue
-<!-- App.vue -->
+{/* App.vue */}
 <template>
     <div id="app">
         <router-view></router-view>
