--- a/docs/ai-bigdata/BigData/Hadoop/full-hadoop-reference.mdx
+++ b/docs/ai-bigdata/BigData/Hadoop/full-hadoop-reference.mdx
@@ -160,9 +160,9 @@ vim core-site.xml
 
 ```xml
 <property>
-<!--指定文件在回收站中的存储时间-->
-<!--默认为0，单位是min-->
-<!--一个文件放在回收站中会存储一天的时间，如果超过一天没有还原，那么就会被清除-->
+{/*指定文件在回收站中的存储时间*/}
+{/*默认为0，单位是min*/}
+{/*一个文件放在回收站中会存储一天的时间，如果超过一天没有还原，那么就会被清除*/}
 <name>fs.trash.interval</name> 
 <value>1440</value>
 </property>
