--- a/docs/misc/Others/cnblogs-simple-memory-theme-beautification.mdx
+++ b/docs/misc/Others/cnblogs-simple-memory-theme-beautification.mdx
@@ -154,7 +154,7 @@ sources:
 ## 页首HTML代码
 
 ```html
-<!--鼠标点击效果-->
+{/*鼠标点击效果*/}
 <script src="https://blog-static.cnblogs.com/files/e-cat/cursor-effects.js"></script>
 ```
 
@@ -164,7 +164,7 @@ sources:
 [站点统计添加教程地址](https://www.dbnuo.com/Cnblogs-Theme-SimpleMemory/docs/v1.1/#/Docs/Customization/statistical)
 
 ```html
-<!-- 为博客底部添加音乐组件 -->
+{/* 为博客底部添加音乐组件 */}
 <div id="player"  class="aplayer"></div>
 <link href="https://files.cnblogs.com/files/shwee/APlayer.min_v1.10.1.css" rel="stylesheet">
 <script src="https://files.cnblogs.com/files/shwee/APlayer.min_v1.10.1.js"></script> 
@@ -216,13 +216,13 @@ const ap = new APlayer({
 ap.init();
 </script>
 
-<!--添加站点统计-->
+{/*添加站点统计*/}
 <div id="cnzzProtocol"  style="display: none;">
     <span class="id_cnzz_stat_icon" id='cnzz_stat_icon_你的id'></span>
     <script src='https://v1.cnzz.com/z_stat.php?id=你的id&online=1&show=line' type='text/javascript'></script>
 </div>
 
-<!--图片放放大效果-->
+{/*图片放放大效果*/}
 <script type="text/javascript" src="https://blog-static.cnblogs.com/files/jajian/img.enlarge.js"></script>
 <div id="outerdiv" style="text-align: center;position: fixed;z-index: 1000;top: 0;left: 0;
     width: 100%;height: 100%;background-color: rgba(255,255,255,.9);">
@@ -230,7 +230,7 @@ ap.init();
         margin: auto;position: absolute;top: 0;bottom: 0;left: 0;right: 0;" src="" />
 </div>
 
-<!--设置鼠标吸附效果-->
+{/*设置鼠标吸附效果*/}
 <script id="c_n_script" src="https://blog-static.cnblogs.com/files/xiaokang01/js.js" color="240,230,140" opacity="1" count="75" zindex="-2">if(/Android|webOS|iPhone|iPod|BlackBerry/i.test(navigator.userAgent)) {
 } else {}</script>
 ```
